<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="PositionMaterials" Id="{4a8cf8aa-10af-475f-a047-2e0bbabc65ff}">
    <Declaration><![CDATA[TYPE PositionMaterials :
STRUCT
	position : INT := 0; //default value is set to predefined constant if bundle needs less than 32 position material pairs
	
	top : STRING;
	left : STRING;
	right : STRING;
	bottom : STRING;
	
	topLeft : STRING;
	topLeftFold : INT;
	
	topRight : STRING;
	topRightFold : INT;
	
	bottomLeft : STRING;
	bottomLeftFold : INT;
	
	bottomRight : STRING;
	bottomRightFold : INT;
	
	numWrapPoints : INT;
	numWrapRotations : INT;
	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>