<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="STRING_5K" Id="{814ccfa5-194c-47af-86ae-d9b8b77e2b62}">
    <Declaration><![CDATA[TYPE STRING_5K : STRING(5000); END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>